--- a/css/style.css
+++ b/css/style.css
@@ -167,8 +167,8 @@ h1 {
 	color: #ffd180;
 }
 
-.footer-navigation a:hover,
-.footer-navigation a:focus,
+.footer-extras a:hover,
+.footer-extras a:focus,
 {
   background-color: #242424;
 }
