--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,8 @@ h2 {
 	line-height: 30px;
 }
 
-/*разметка сеток*/
+                                    /*РАЗМЕТКА СЕТОК*/
+
 .main-header {
 	margin-bottom: 46px;
 	min-height: 47px;
@@ -345,4 +346,15 @@ h2 {
 	display: flex;
 	padding-left: 10px;
 	align-items: center;
+}
+
+.main-header-bottom {
+	display: flex;
+	height: 60px;
+	width: 940px;
+	margin: 0 auto;
+	background-color: #32425c;
+	flex-direction: column;
+    align-items: center;
+    list-style: none;
 }
