--- a/css/style.css
+++ b/css/style.css
@@ -459,6 +459,43 @@ address {
   	color: #000000;
 }
 
+.contacts p {
+  width: 179px;
+  height: 36px;
+  font-family: PTSans;
+  font-size: 13px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.85;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000000;
+}
+
+.map-address {
+	display: flex;
+	padding-top: 36px;
+}
+
+.map_button {
+	display: inline-block;
+	background-color: #ee3643;
+	list-style: none;
+	font-family: Cuprum;
+	font-size: 14px;
+	font-weight: normal;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.29;
+	letter-spacing: normal;
+	text-align: center;
+	color: #ffffff;
+	padding: 14px 59px 12px 63px;
+	border-radius: 3px;
+	margin-top: 40px;
+}
+
 .company-names {
 	display: inline;
   	width: 109px;
@@ -474,7 +511,23 @@ address {
   	color: #000000;
 }
 
-
+.info_button {
+	display: inline-block;
+	background-color: #ee3643;
+	list-style: none;
+	font-family: Cuprum;
+	font-size: 14px;
+	font-weight: normal;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.29;
+	letter-spacing: normal;
+	text-align: center;
+	color: #ffffff;
+	padding: 14px 40px 12px 41px;
+	border-radius: 3px;
+	margin-top: 37px;
+}
 
 
 
