--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ h1 {
   color: #ffffff;
   box-shadow: inset 0px -5px 0 0 #293449;
   background-color: #32425c;
+  width: 940px;
+  height: 60px;
 }
 
 .main-navigation {
@@ -381,10 +383,19 @@ address {
 	background-color: #32425c;
 }
 
-.main-navigation {
+.main-navigation-ul {
 	display: flex;
-	flex-direction: column;
 	list-style: none;
+	justify-content: space-around;
+  	font-family: Cuprum;
+  	font-size: 17px;
+  	font-weight: normal;
+  	font-style: normal;
+  	font-stretch: normal;
+  	line-height: 1;
+  	letter-spacing: normal;
+  	text-align: left;
+ 	color: #ffffff;
 }
 
 .index-columns {
@@ -400,46 +411,46 @@ address {
 }
 
 .info h2 {
-  display: inline;
-  height: 21px;
-  width: 300px;
-  font-family: Cuprum;
-  font-size: 30px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1;
-  letter-spacing: normal;
-  text-align: left;
-  color: #000000;
+  	display: inline;
+  	height: 21px;
+ 	width: 300px;
+  	font-family: Cuprum;
+	font-size: 30px;
+	font-weight: normal;
+  	font-style: normal;
+  	font-stretch: normal;
+  	line-height: 1;
+  	letter-spacing: normal;
+  	text-align: left;
+  	color: #000000;
 }
 
 .info p {
-  width: 519px;
-  height: 37px;
-  font-family: PTSans;
-  font-size: 13px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.85;
-  letter-spacing: normal;
-  text-align: left;
-  color: #000000;
+  	width: 519px;
+  	height: 37px;
+  	font-family: PTSans;
+  	font-size: 13px;
+  	font-weight: normal;
+  	font-style: normal;
+  	font-stretch: normal;
+  	line-height: 1.85;
+  	letter-spacing: normal;
+ 	text-align: left;
+  	color: #000000;
 }
 
 .padding-for-line {
-  padding-top: 36px;
-  width: 386px;
-  font-family: PTSans;
-  font-size: 13px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.85;
-  letter-spacing: normal;
-  text-align: left;
-  color: #000000;
+  	padding-top: 36px;
+  	width: 386px;
+  	font-family: PTSans;
+  	font-size: 13px;
+  	font-weight: normal;
+  	font-style: normal;
+  	font-stretch: normal;
+  	line-height: 1.85;
+  	letter-spacing: normal;
+  	text-align: left;
+  	color: #000000;
 }
 
 .contacts {
@@ -447,30 +458,30 @@ address {
 }
 
 .contacts h2 {
-  display: inline;
-  height: 21px;
-  font-family: Cuprum;
-  font-size: 30px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1;
-  letter-spacing: normal;
-  color: #000000;
+  	display: inline;
+ 	height: 21px;
+  	font-family: Cuprum;
+  	font-size: 30px;
+  	font-weight: normal;
+  	font-style: normal;
+  	font-stretch: normal;
+  	line-height: 1;
+  	letter-spacing: normal;
+  	color: #000000;
 }
 
 .contacts p {
-  width: 179px;
-  height: 36px;
-  font-family: PTSans;
-  font-size: 13px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.85;
-  letter-spacing: normal;
-  text-align: left;
-  color: #000000;
+  	width: 179px;
+  	height: 36px;
+  	font-family: PTSans;
+  	font-size: 13px;
+  	font-weight: normal;
+  	font-style: normal;
+  	font-stretch: normal;
+  	line-height: 1.85;
+  	letter-spacing: normal;
+  	text-align: left;
+  	color: #000000;
 }
 
 .map-address {
@@ -498,17 +509,25 @@ address {
 
 .company-names {
 	display: inline;
-  width: 109px;
-  height: 17px;
-  font-family: Cuprum;
-  font-size: 18px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
+  	width: 109px;
+  	height: 16px;
+  	font-family: Cuprum;
+  	font-size: 18px;
+  	font-weight: normal;
+  	font-style: normal;
+ 	font-stretch: normal;
  	line-height: 1.11;
  	letter-spacing: normal;
-  text-align: left;
-  color: #000000;
+  	text-align: left;
+  	color: #000000;
+}
+
+.auto-trading {
+	padding-top: 20px;
+}
+
+.expedition {
+	padding-top: 20px;
 }
 
 .info_button {
@@ -529,5 +548,72 @@ address {
 	margin-top: 37px;
 }
 
+.main-footer {
+	display: flex;
+  	height: 193px;
+  	background-color: #32425c;
+}
 
+.main-footer-logo {
+	display: flex;
+  	padding-left: 130px;
+}
 
+.footer-navigation {
+	padding-left: 173px;
+	padding-top: 25px;
+	width: 69px;
+	height: 13px;
+	font-family: Cuprum;
+	font-size: 18px;
+	font-weight: normal;
+	font-style: normal;
+	font-stretch: normal;
+	line-height: 1.33;
+	letter-spacing: normal;
+	text-align: left;
+  	color: #f1f5f7;
+}
+
+.footer-navigation-ul {
+	display: flex;
+	list-style: none;
+}
+
+.news {
+	padding-left: 60px;
+}
+
+.catalog {
+	padding-left: 60px;
+}
+
+.delivery {
+	padding-left: 60px;
+}
+
+.contacts {
+	padding-left: 60px;
+}
+
+.footer-address {
+	display: flex;
+	width: 322px;
+  	height: 40px;
+  	padding-right: 745px;
+}
+
+.footer-address-text {
+  	width: 322px;
+  	height: 40px;
+  	font-family: Cuprum;
+  	font-size: 18px;
+  	font-weight: normal;
+  	font-style: normal;
+  	font-stretch: normal;
+  	line-height: 1.33;
+  	letter-spacing: normal;
+  	text-align: left;
+  	color: #f3f7f9;
+  	
+}
